--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,12 @@ jobs:
         name: coverage-report
         path: coverage.out
 
+    - name: Upload Build Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: my-go-app-binary
+        path: ./my-go-app
+
   security-scan:
     runs-on: ubuntu-latest
     steps:
