Add SonarQube steps in CI file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,14 @@ jobs:
       with:
         name: my-go-app-binary
         path: ./my-go-app
+  
+    - name: SonarQube Analysis
+      run: |
+        wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006.zip
+        unzip sonar-scanner-cli-5.0.1.3006.zip
+        export PATH=$PATH:$(pwd)/sonar-scanner-5.0.1.3006/bin
+        sonar-scanner \
+          -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
   security-scan:
     runs-on: ubuntu-latest
