--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=my-go-app
 sonar.projectName=My Go App
-sonar.host.url=http://192.168.64.1:9000
+sonar.organization=<sumitchh>
+sonar.host.url=https://sonarcloud.io
 sonar.login=${SONAR_TOKEN}
 sonar.sources=.
 sonar.language=go
