removed <> from project key

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=my-go-app
 sonar.projectName=My Go App
-sonar.organization=<sumitchh>
+sonar.organization=sumitchh
 sonar.host.url=https://sonarcloud.io
 sonar.login=${SONAR_TOKEN}
 sonar.sources=.
