--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=my-go-app
+sonar.projectKey=sumitchh_my-go-app_1
 sonar.projectName=My Go App
 sonar.organization=sumitchh
 sonar.host.url=https://sonarcloud.io
