--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,9 +42,8 @@ jobs:
     - name: SonarCloud Analysis
       uses: SonarSource/sonarcloud-github-action@v2
       with:
-        organization: sumitchh
-        projectKey: sumitchh_my-go-app_1
-        token: ${{ secrets.SONAR_TOKEN }}
+        args: >
+          -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
   security-scan:
     runs-on: ubuntu-latest
