--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,8 @@
 sonar.projectKey=sumitchh_my-go-app_1
-sonar.projectName=My Go App
 sonar.organization=sumitchh
 sonar.host.url=https://sonarcloud.io
-sonar.login=${SONAR_TOKEN}
 sonar.sources=.
+sonar.inclusions=**/*.go
 sonar.language=go
 sonar.go.coverage.reportPaths=coverage.out
 
