Fix: add chmod and remove redundant Java setup

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,19 +39,14 @@ jobs:
         name: my-go-app-binary
         path: ./my-go-app
 
-    - name: Set up Java
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin'
-        java-version: '17'
-
     - name: Install and Run SonarScanner
       run: |
         wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
         unzip sonar-scanner-cli-5.0.1.3006-linux.zip
+        chmod +x sonar-scanner-5.0.1.3006/bin/sonar-scanner
         ./sonar-scanner-5.0.1.3006/bin/sonar-scanner -Dsonar.login=${{ secrets.SONAR_TOKEN }} -X -Dsonar.verbose=true
 
-  security-scan:
+security-scan:
     runs-on: ubuntu-latest
 
     steps:
