Fix: use correct sonar-scanner extracted directory name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,8 +43,8 @@ jobs:
       run: |
         wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
         unzip sonar-scanner-cli-5.0.1.3006-linux.zip
-        chmod +x sonar-scanner-5.0.1.3006/bin/sonar-scanner
-        ./sonar-scanner-5.0.1.3006/bin/sonar-scanner -Dsonar.login=${{ secrets.SONAR_TOKEN }} -X -Dsonar.verbose=true
+        chmod +x sonar-scanner-5.0.1.3006-linux/bin/sonar-scanner
+        ./sonar-scanner-5.0.1.3006-linux/bin/sonar-scanner -Dsonar.login=${{ secrets.SONAR_TOKEN }} -X -Dsonar.verbose=true
 
   security-scan:
     runs-on: ubuntu-latest
